<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="formModel"
            type="com.rootstrap.flowforms.example.SignUpFormModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpFormActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:text="@={formModel.name}"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            app:hintEnabled="false"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={formModel.email}"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/email_loading_progress_bar"
            android:layout_width="0dp"
            android:layout_height="@dimen/email_progress_bar_height"
            android:layout_marginTop="@dimen/margin_l_negative"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout"
            app:layout_constraintEnd_toEndOf="@+id/email_input_layout"
            app:layout_constraintStart_toStartOf="@+id/email_input_layout"
            />

        <TextView
            android:id="@+id/email_available_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m_negative"
            android:text="@string/email_is_available"
            android:textColor="@color/teal_700"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/email_input_layout"
            app:layout_constraintEnd_toEndOf="@+id/email_input_layout"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={formModel.newPassword}"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_m"
            android:layout_marginTop="@dimen/margin_m"
            android:layout_marginEnd="@dimen/margin_m"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:text="@={formModel.confirmPassword}"
                tools:ignore="TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/tcs_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:checked="@={formModel.confirm}"
            app:layout_constraintStart_toStartOf="@+id/confirm_password_input_layout"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_input_layout"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tcs_check_box_text"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/margin_top"
            android:paddingEnd="@dimen/margin_top"
            android:text="@string/confirmation"
            app:layout_constraintBottom_toBottomOf="@+id/tcs_check_box"
            app:layout_constraintEnd_toEndOf="@id/confirm_password_input_layout"
            app:layout_constraintStart_toEndOf="@+id/tcs_check_box"
            app:layout_constraintTop_toTopOf="@+id/tcs_check_box" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tcs_check_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

